fix(activity-calendar) Fix Ctrl+Click and Shift+Click

--- a/src/app/activity-calendar/calendar/calendar.component.scss
+++ b/src/app/activity-calendar/calendar/calendar.component.scss
@@ -26,63 +26,6 @@ mat-toolbar {
   }
 }
 
-.cell-selection {
-  position: fixed;
-  background-color: rgba(var(--ion-color-secondary-rgb), 0.4);
-  border: 2px solid var(--mat-cell-border-color-hover);
-  z-index: 10;
-  pointer-events: none;
-
-  &:has(.debug) {
-    align-content: end;
-  }
-
-  .debug {
-    --ion-padding: 2px;
-    padding-inline-start: var(--ion-padding);
-    padding-inline-end: var(--ion-padding);
-    color: var(--ion-color-tertiary);
-    font-style: italic;
-    font-size: 12px;
-    background-color: rgba(var(--ion-background-color-rgb, 255, 255, 255), 0.7);
-  }
-}
-
-/* -- cell clipboard -- */
-@keyframes linearGradientMove {
-  100% {
-    background-position:
-      4px 0,
-      -4px 100%,
-      0 -4px,
-      100% 4px;
-  }
-}
-.cell-clipboard {
-  --border-color: var(--ion-color-accent, gray);
-  position: fixed;
-  z-index: 5;
-  border: 1px dotted var(--border-color);
-  animation: linearGradientMove 0.3s infinite linear;
-  background:
-    linear-gradient(90deg, var(--border-color) 50%, transparent 0) repeat-x,
-    linear-gradient(90deg, var(--border-color) 50%, transparent 0) repeat-x,
-    linear-gradient(0deg, var(--border-color) 50%, transparent 0) repeat-y,
-    linear-gradient(0deg, var(--border-color) 50%, transparent 0) repeat-y;
-  background-size:
-    4px 2px,
-    4px 2px,
-    2px 4px,
-    2px 4px;
-  background-position:
-    0 0,
-    0 100%,
-    0 0,
-    100% 0;
-  background-color: unset;
-  pointer-events: none;
-}
-
 .table-container {
   --table-toolbar-height: 0px;
   height: calc(100% - var(--table-container-offset, 0px) - var(--table-toolbar-height));
@@ -124,6 +67,7 @@ mat-toolbar {
     width: var(--col-header-size) !important;
     max-width: var(--col-header-size) !important;
   }
+
   .mat-mdc-row {
     display: flex !important;
     flex-direction: column !important;
@@ -138,6 +82,7 @@ mat-toolbar {
       &.mat-column-basePortLocation {
         --mat-table-background-color: rgba(var(--ion-color-medium-rgb), 0.8) !important;
         background-color: var(--mat-table-background-color);
+
         * {
           display: none;
           visibility: hidden;
@@ -153,6 +98,7 @@ mat-toolbar {
       &.mat-column-fishingArea {
         --mat-table-background-color: rgba(var(--ion-color-medium-rgb), 0.8) !important;
         background-color: var(--mat-table-background-color);
+
         * {
           display: none;
           visibility: hidden;
@@ -170,6 +116,7 @@ mat-toolbar {
 
   .mat-mdc-header-cell {
     padding: 0;
+
     ion-label {
       width: 100%;
     }
@@ -213,6 +160,7 @@ mat-toolbar {
 
     &.collapsed {
       --mat-row-height: 3px !important;
+
       * {
         visibility: hidden;
         display: none;
@@ -266,7 +214,14 @@ mat-toolbar {
       visibility: unset;
     }
   }
+}
 
+/* ------------------------------------
+ * Cell selection and cell clipboard
+ * ------------------------------------ */
+
+.mat-mdc-table {
+  // Enable cell selection on a cell
   .mat-mdc-cell-resizable {
     position: relative;
 
@@ -335,6 +290,7 @@ mat-toolbar {
     }
   }
 
+  // When a cell cell selection has been starting
   &.resizing {
     --mat-cell-resizable-handle-color-hover: transparent;
 
@@ -353,4 +309,65 @@ mat-toolbar {
       visibility: hidden !important;
     }
   }
+}
+
+// Cell selection div
+.cell-selection {
+  position: fixed;
+  background-color: rgba(var(--ion-color-secondary-rgb), 0.4);
+  border: 2px solid var(--mat-cell-border-color-hover);
+  z-index: 10;
+  pointer-events: none;
+
+  &:has(.debug) {
+    align-content: end;
+  }
+
+  .debug {
+    --ion-padding: 2px;
+    padding-inline-start: var(--ion-padding);
+    padding-inline-end: var(--ion-padding);
+    color: var(--ion-color-tertiary);
+    font-style: italic;
+    font-size: 12px;
+    background-color: rgba(var(--ion-background-color-rgb, 255, 255, 255), 0.7);
+    display: inline-block;
+  }
+}
+
+// Cell clipboard border animation
+@keyframes linearGradientMove {
+  100% {
+    background-position:
+      4px 0,
+      -4px 100%,
+      0 -4px,
+      100% 4px;
+  }
+}
+
+// Cell clipboard div
+.cell-clipboard {
+  --border-color: var(--ion-color-accent, gray);
+  position: fixed;
+  z-index: 5;
+  border: 1px dotted var(--border-color);
+  animation: linearGradientMove 0.3s infinite linear;
+  background:
+    linear-gradient(90deg, var(--border-color) 50%, transparent 0) repeat-x,
+    linear-gradient(90deg, var(--border-color) 50%, transparent 0) repeat-x,
+    linear-gradient(0deg, var(--border-color) 50%, transparent 0) repeat-y,
+    linear-gradient(0deg, var(--border-color) 50%, transparent 0) repeat-y;
+  background-size:
+    4px 2px,
+    4px 2px,
+    2px 4px,
+    2px 4px;
+  background-position:
+    0 0,
+    0 100%,
+    0 0,
+    100% 0;
+  background-color: unset;
+  pointer-events: none;
 }
